<resources>
    <string name="app_name">My Vaccine</string>
    <string name="employee_login">Employee Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="info_email_password">Please enter your email address and password</string>
    <string name="parent_login_label">Parent Login</string>
    <string name="clsc_login">CLSC login</string>
    <string name="create_an_account_text">Create an account</string>
    <string name="forgot_password_label">forgot password?</string>
    <string name="login">Login</string>
    <string name="password_text">Password</string>
    <string name="email_address_text">Email address</string>
    <string name="enter_email_address_and_password_text">Enter email address and password.</string>
    <string name="child_information_label">Child Information</string>
    <string name="child_name_label_text">Child Name :</string>
    <string name="child1">Child1</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="child_age_label_text">Child Age :</string>
    <string name="child_age">2 years</string>
    <string name="child_gender_label_text">Child Gender :</string>
    <string name="gender">Female</string>
    <string name="get_immunized_text">Get Immunized</string>
    <string name="logo_image_description">Logo Image</string>
    <string name="track_your_immunization_record_text">Track your Immunization record</string>
    <string name="create_an_account_button_label">Create An Account</string>
    <string name="already_have_an_account_log_in_label_text">Already have an account? Log In</string>
    <string name="parent_login_text_label">Parent Login</string>
    <string name="create_account_label">Create Account</string>
    <string name="name_label">Name</string>
    <string name="email_address_label">Email Address</string>
    <string name="phone_label">Phone</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="i_agree_to_term_and_conditions_checkbox">I agree to term and conditions</string>
    <string name="sign_up_label">SIGN UP</string>
    <string name="employee_login_label">Employee Login</string>
    <string name="please_enter_your_email_address_and_password_label">Please enter your email address and password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="child_name_text">Child Name</string>
    <string name="my_records">My Records</string>
    <string name="plus">+</string>
    <string name="start_by_creating_records_for_your_family_members">Start by creating records for your family members</string>
    <string name="new_record">New Record</string>
    <string name="settings_label">Settings</string>
    <string name="help">Help</string>
    <string name="add_a_child_label">Add a child</string>
    <string name="enter_details_of_your_child_label">Enter details of your child</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender_label">Gender</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="vaccine_label">Vaccine Label</string>
    <string name="recommended_age">Recommended Age:</string>
    <string name="vaccine_age">Vaccine Age</string>
    <string name="description_label">Description:</string>
    <string name="Vaccine_discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="edit_child_info">Edit child info</string>
    <string name="vaccines_recommended">Vaccines recommended</string>
    <string name="pending_appointments">Pending Appointments</string>
    <string name="appointment_history">Appointment History</string>
    <string name="logout">Logout</string>
    <string name="edit_child_information">Edit child information</string>
    <string name="child_name">Child name</string>
    <string name="confirm_details">confirm details</string>
    <string name="delete_child">Delete Child</string>
    <string name="profile">Profile</string>
    <string name="get_immunized">Get Immunized</string>
    <string name="vaccine_it">Vaccine It</string>
    <string name="vaccine_label">Vaccine Label</string>
    <string name="parents_email">Parents email:</string>
    <string name="parent_name">parent name</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="select_date">Select Date</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="vaccine_label">Vaccine Label</string>
    <string name="parents_email">Parents email:</string>
    <string name="parent_name">parent name</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="select_date">Select Date</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="home">Home</string>
    <string name="appointment_history">Appointment History</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>


</resources>