<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ConfirmAppointmentActivity">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/vaccine_name"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/vaccine_label"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/creme_white"
        android:layout_marginStart="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/vaccine_name"
        android:id="@+id/vaccine_age_layout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/vaccine_age_label"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/parents_email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/creme_white"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/parent_email"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/parent_name"
            android:layout_marginStart="60dp"
            android:textSize="20sp"
            android:textColor="@color/creme_white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/vaccine_age_layout"
        android:id="@+id/vaccine_appointment"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/appointment_label"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/appointment_date"
            android:textStyle="bold"
            android:textColor="@color/creme_white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/appointmentDate"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:textColor="@color/creme_white"
            android:textColorHint="#FD0000"
            android:layout_marginStart="30dp"
            android:textSize="20sp" />

    </LinearLayout>



    <Button
        android:id="@+id/appointment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/round_button"
        android:text="@string/book_appointment"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white" />



</RelativeLayout>