<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".vaccine_detailview">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/vaccine_name"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/vaccine_label"
        android:textSize="25sp"
        android:textColor="@color/creme_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/vaccine_name"
        android:id="@+id/vaccine_age_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/vaccine_age_label"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/recommended_age"
            android:textColor="@color/creme_white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/vaccine_age"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/vaccine_age"
            android:textColor="@color/creme_white"
            android:layout_marginStart="30dp"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/vaccine_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vaccine_age_layout"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/description_label"
        android:textColor="@color/creme_white"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/vaccine_description"
        android:layout_below="@id/vaccine_description_label"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Vaccine_discription"
        android:gravity="center_vertical"
        android:textColor="@color/creme_white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/appointmentHistory_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/round_button"
        android:text="Appointment History"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp">

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/round_button"
            android:text="Home"
            android:layout_marginLeft="70dp"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/round_button"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="15sp" />



    </LinearLayout>

    <Button
        android:id="@+id/appointment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/round_button"
        android:text="@string/book_appointment"
        android:textColor="@color/white" />

</RelativeLayout>