<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="300dp"
                android:layout_height="168dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:contentDescription="@string/logo_image_description"
                app:srcCompat="@drawable/transparent_logo" />

            <TextView
                android:id="@+id/immunized_label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/create_account_label"
                android:textColor="@color/creme_white"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/etRegName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:autofillHints="@string/name_label"
                android:textAlignment="center"
                android:inputType="text"
                android:hint="@string/name_label"
                android:importantForAutofill="yes"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/etRegGmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:autofillHints="@string/email_address_label"
                android:textAlignment="center"
                android:hint="@string/email_address_label"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                android:importantForAutofill="yes" />

            <EditText
                android:id="@+id/etRegPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:autofillHints="@string/phone_label"
                android:inputType="phone"
                android:textSize="17sp"
                android:hint="@string/phone_label"
                android:importantForAutofill="yes" />

            <EditText
                android:id="@+id/etRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:autofillHints="@string/password_label"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:hint="@string/password_label"
                android:importantForAutofill="yes" />

            <EditText
                android:id="@+id/etRegCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:autofillHints="@string/confirm_password_label"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:hint="@string/confirm_password_label"
                android:importantForAutofill="yes" />


            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_term_and_conditions_checkbox"
                android:layout_marginStart="15dp"
                android:textColor="@color/Blue"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_button"
                android:padding="17dp"
                android:textColor="@color/white"
                android:text="SIGN UP"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>