<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_background"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                app:srcCompat="@drawable/transparent_logo"
                android:contentDescription="@string/logo_image_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/immunized_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/my_records"
                    android:textColor="@color/creme_white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/addRecords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_button"
                    android:text="@string/plus"
                    android:textColor="@color/creme_white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="182dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="60dp"
                    android:textAlignment="center"
                    android:contentDescription="@string/logo_image_description"
                    app:srcCompat="@drawable/family" />

                <TextView
                    android:id="@+id/familyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/start_by_creating_records_for_your_family_members"
                    android:textColor="@color/Blue"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/addRecords2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:text="@string/new_record"
                android:textColor="@color/creme_white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forget_Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:text="@string/settings_label"
                    android:layout_marginStart="50dp"
                    android:textAlignment="center"
                    android:textColor="@color/Blue" />

                <TextView
                    android:id="@+id/CreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/help"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/Blue" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>